# finlib

./: .gitattributes  .gitignore  Cargo.toml  README.md  build-all.sh
.gitea/workflows/: build.yml
.github/workflows/: build.yml
FinLib.NET/: FinLib.sln
FinLib.NET/FinLib/: FinLib.Indicators.cs  FinLib.Interest.cs  FinLib.Risk.cs  FinLib.Stats.cs  FinLib.cs  FinLib.csproj  IPayoff.cs  IProfit.cs  IValueAtRisk.cs  Mortgage.cs  NativeMethods.cs  NativeMethods.g.cs  Portfolio.cs
FinLib.NET/FinLib.Bench/: FinLib.Bench.csproj  Program.cs
FinLib.NET/FinLib.Bench/Benchmarks/: HistoricalVAR.cs
FinLib.NET/FinLib.Bench/Comparisons/: HistoricalVARDotnet.cs
FinLib.NET/FinLib.Test/: Basic.cs  Curve.cs  FinLib.Test.csproj  Portfolio.cs  PricePair.cs  Swap.cs
FinLib.NET/FinLib/Curve/: Curve.cs
FinLib.NET/FinLib/Extensions/: EnumExtensions.cs  HelperExtensions.cs
FinLib.NET/FinLib/FixedIncome/: Mortgage.cs
FinLib.NET/FinLib/Options/: OptionContract.cs  OptionStrategy.cs  OptionStrategyComponent.cs  OptionSurfaceParameters.cs  OptionsSurface.cs
FinLib.NET/FinLib/Portfolio/: Portfolio.cs  PortfolioAsset.cs  Strategy.cs
FinLib.NET/FinLib/Price/: Price.cs  PricePair.cs  PriceRange.cs  PriceRangePair.cs  PriceTimestamp.cs
FinLib.NET/FinLib/Risk/: FinLib.Risk.cs  IValueAtRisk.cs  Portfolio.cs  PortfolioAsset.cs
FinLib.NET/FinLib/Swap/: Swap.cs
FinlibSwift/: .gitignore  Cargo.toml  README.md  build.sh  package.sh
FinlibSwift/src/: lib.rs
finlib/: Cargo.toml
finlib-cpp/: CMakeLists.txt  README.md  finlib-native.h
finlib-cpp/include/: finlib-native.h
finlib-cpp/include/finlib/: finlib-native.h
finlib-cpp/src/: CMakeLists.txt  main.cpp
finlib-cpp/src/finlib/: CMakeLists.txt  finlib.cpp  finlib.hpp
finlib-cpp/src/finlib/curve/: curve.cpp  curve.hpp
finlib-cpp/src/finlib/mortgage/: mortgage.cpp  mortgage.hpp
finlib-cpp/src/finlib/options/: option_contract.cpp  option_contract.hpp  option_strategy.cpp  option_strategy.hpp  option_strategy_component.cpp  option_strategy_component.hpp  option_surface.cpp  option_surface.hpp  option_surface_params.cpp  option_surface_params.hpp
finlib-cpp/src/finlib/portfolio/: portfolio.cpp  portfolio.hpp  portfolio_asset.cpp  portfolio_asset.hpp  strategy.cpp  strategy.hpp
finlib-cpp/src/finlib/price/: price.cpp  price.hpp  price_pair.cpp  price_pair.hpp
finlib-cpp/src/finlib/swap/: swap.cpp  swap.hpp
finlib-cpp/test/: CMakeLists.txt
finlib-cpp/test/src/: basic_test.cpp  curve_test.cpp
finlib-ffi/: Cargo.toml  build.rs  cbindgen.toml
finlib-ffi/src/: curve.rs  indicators.rs  lib.rs  mortgage.rs  options.rs  options_contract.rs  options_strategy.rs  portfolio.rs  portfolio_asset.rs  price.rs  price_pair.rs  price_range.rs  price_range_pair.rs  price_timestamp.rs  strategy.rs  swap.rs
finlib-wasm/: Cargo.toml  rename-pkg.sh
finlib-wasm/.cargo/: config.toml
finlib-wasm/js/: package.json
finlib-wasm/js-local/: index.js  package-lock.json  package.json  webpack.dev.js
finlib-wasm/js-repo/: index.html  index.js  package-lock.json  package.json  webpack.common.js
finlib-wasm/src/: lib.rs
finlib/benches/: rayon_options.rs
finlib/src/: lib.rs
finlib/src/curve/: curve.rs  mod.rs  point.rs
finlib/src/derivatives/: mod.rs
finlib/src/derivatives/options/: mod.rs  option_contract.rs  templates.rs
finlib/src/derivatives/options/blackscholes/: generate.rs  mod.rs
finlib/src/derivatives/options/intrinsic_value/: mod.rs
finlib/src/derivatives/options/strategy/: component.rs  mod.rs  strategy.rs  templates.rs
finlib/src/derivatives/swaps/: mod.rs
finlib/src/ffi/: mod.rs
finlib/src/ffi/py/: curve.rs  mod.rs  options.rs  portfolio.rs  price.rs
finlib/src/ffi/wasm/: curve.rs  mod.rs  options.rs  portfolio.rs  price.rs
finlib/src/fixed_income/: mod.rs
finlib/src/fixed_income/annuity/: mod.rs
finlib/src/fixed_income/mortgage/: mod.rs
finlib/src/indicators/: mod.rs
finlib/src/interest/: mod.rs
finlib/src/market_data/: mod.rs  price_range.rs
finlib/src/market_data/price_timeline/: mod.rs  static_timeline.rs  varying_timeline.rs
finlib/src/market_data/price_timeline/static_timeline/: mod.rs  test.rs
finlib/src/market_data/price_timeline/varying_timeline/: mod.rs
finlib/src/options/: mod.rs
finlib/src/options/blackscholes/: OptionSurface.rs  generate.rs  mod.rs  option_surface.rs
finlib/src/options/intrinsic_value/: mod.rs
finlib/src/portfolio/: asset.rs  mod.rs  portfolio.rs  test.rs
finlib/src/price/: bbo.rs  enums.rs  mod.rs  price.rs  price_pair.rs
finlib/src/py/: portfolio.rs
finlib/src/risk/: mod.rs  portfolio.rs  volatility.rs
finlib/src/risk/forecast/: mod.rs
finlib/src/risk/var/: historical.rs  mod.rs  varcovar.rs
finlib/src/stats/: covariance.rs  mod.rs
finlib/src/swaps/: mod.rs
finlib/src/util/: mod.rs  roc.rs  vector.rs
finlib/src/wasm/: portfolio.rs
notebooks/: historical_var.ipynb  interviewqs_sample.ipynb  mortgage.ipynb  option_strategy.ipynb  pyproject.toml  scratch.ipynb  varcovar_var.ipynb  varcovar_var_portfolio.ipynb  varcovar_var_portfolio_aapl.ipynb
pyfinlib/: Cargo.toml
pyfinlib/src/: lib.rs
