[package]
name = "finlib-ffi"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
finlib = { path = "../finlib", features = ["ffi"] }

[build-dependencies]
cbindgen = "0.28.0"
csbindgen = "1.8.0"