[package]
name = "finlib-ffi"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
finlib = { path = "../finlib", features = ["ffi"] }
chrono = { workspace = true }

[build-dependencies]
cbindgen = "0.29.0"
csbindgen = "1.9.3"