[package]
name = "finlib-ffi"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
finlib = { path = "../finlib", default-features = false, features = ["ffi"] }
chrono = { workspace = true, default-features = false }
talc = { workspace = true, optional = true }
spin = { workspace = true, optional = true }

[features]
default = ["std"]
std = ["finlib/std"]
rayon = ["finlib/rayon"]
global_alloc = ["dep:talc", "dep:spin", "talc/lock_api"]

[build-dependencies]
cbindgen = "0.29.0"
csbindgen = "1.9.3"