[package]
name = "finlib"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
wasm-bindgen = { workspace = true, optional = true }
pyo3 = { workspace = true, optional = true }
rayon = { workspace = true, optional = true }
ndarray = { workspace = true }
ndarray-stats = { workspace = true }
nalgebra = { workspace = true }
statrs = { workspace = true }
log = { workspace = true }
getrandom = "*"

[features]
py = ["dep:pyo3"]
wasm = ["getrandom/js", "dep:wasm-bindgen"]
parallel = ["dep:rayon"]
ffi = []