[package]
name = "finlib"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
wasm-bindgen = { workspace = true, optional = true }
pyo3 = { workspace = true, optional = true }
rayon = { workspace = true }
ndarray = { workspace = true }
ndarray-stats = { workspace = true }
nalgebra = { workspace = true }
statrs = { workspace = true }
chrono = { workspace = true, default-features = false }
log = { workspace = true }
getrandom = { workspace = true }
rand = { workspace = true }
serde = { workspace = true, optional = true }
serde-wasm-bindgen = { workspace = true, optional = true }
num = "0.4.3"
bon = { workspace = true }

[dev-dependencies]
criterion = "0.6.0"

[[bench]]
name = "rayon_roc"
harness = false

[[bench]]
name = "rayon_options"
harness = false

[features]
default = []
serde = ["dep:serde", "chrono/serde"]
btree_cursors = []
py = ["dep:pyo3"]
wasm = ["getrandom/js", "dep:wasm-bindgen", "dep:serde-wasm-bindgen", "chrono/wasmbind"]
ffi = []