[project]
name = "notebooks"
version = "0.1.0"
requires-python = ">=3.12,<3.13"

dependencies = [
    "jupyterlab (>=4.3.5,<5.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "openbb (>=4.4.0,<5.0.0)",
    "yfinance (>=0.2.52,<0.3.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "numpy (>=2.2.3,<3.0.0)",
    "maturin (>=1.8.2,<2.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
